frontend/src/assets/style/hobby-tracker.css
.hobby-tracker {
  font-size: 20px;
  font-weight: bold;
  background-color: pink;
  margin: 20px 0px 5px 0px;
}

.hobby-title {
  display: flex;
  padding: 5px;
}

/* All buttons -------------------------------------------------------------------------------------------------- */
.hobby-buttons {
  color: black;
  font-size: 12px;
  border-radius: 5px;
  border-collapse: collapse;
  margin: 0px 5px 0px 5px;
}

.hobby-buttons:hover {
  cursor: pointer;
}

/* Hobby Table ------------------------------------------------------------------------------------------------ */
.hobby-header {
  margin-right: 25px;
}

.hobby-table {
  width: 100%;
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
  font-size: 14px;
  border-collapse: collapse;
  border: 1px solid #ddd;
  margin: auto;
}

.hobby-table-headers {
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: purple;
  color: white;
}

.hobby-items {
  text-align: center;
}

.hobby-item-name {
  text-align: left;
}

/* Hobby Modal ------------------------------------------------------------------------------------------------ */
.hobby-modal-container {
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  background-color: #474e5d;
  padding-top: 50px;
}

.hobby-modal {
  background-color: pink; /* current documents background-color is #fefefe */
  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
  border: 1px solid #888;
  width: 80%; /* Could be more or less, depending on screen size */
  border-radius: 10px; /* Gives modal rounded edges */
  padding: 25px;
}

.add-hobby-title {
  font-size: 26px;
  border-bottom: 1px solid #f1f1f1;
  margin-bottom: 25px;
}

.hobby-modal-sections {
  display: flex;
  margin: 10px 0px 10px 0;
}

.add-hobby-section-titles {
  font-size: 18px;
  width: 30%;
}

.add-hobby-inputs {
  margin-left: 10px;
  width: 240px;
}

.hobby-modal-button-container {
  display: flex;
  justify-content: flex-end;
}

/* Only for close hobby button */
.close-hobby-button {
  margin-right: 0px;
}

